[package]
name = "git-cz"
version = "0.7.2"
description = "Git conventional commit tools written in Rust"
keywords = ["git", "conventional", "commit", "changelog", "semantic"]
categories = ["development-tools::build-utils"]
readme = "README.md"
homepage = "https://git-cz.github.io"
repository = "https://github.com/ttys3/git-cz.git"
license = "MIT"
authors = ["Hannes De Valkeneer <hannes@de-valkeneer.be>"]
edition = "2024"
include = [
    "build.rs",
    "src/*",
    "README.md",
    "LICENSE"
]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
# if enable zlib-ng feature, openssl-sys is required and will result in failure for darwin
git2 = { version = "0.19.0", default-features = false, features = [] }
handlebars = { version = "6.2.0", features = [ "dir_source" ] }
regex = "1.11.1"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
structopt = "0.3.26"
url = "2.5.4"
thiserror = "2.0.6"
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }

[target.'cfg(unix)'.dependencies]
skim = { version = "0.15.5" }

[build-dependencies]
structopt = "0.3.26"

[package.metadata.deb]
depends = ""
extended-description = """\
Git conventional commit tools written in Rust. \
Create a changelog. \
Check if commits follow the convention. \
Calculate the next version based on the conventional commits."""
assets = [
    # bin
    ["target/release/git-cz", "/usr/local/bin/", "755"],
    # completions
    ["target/completions/git-cz.bash", "/usr/share/bash-completion/completions/", "644"],
    ["target/completions/_git-cz", "/usr/share/zsh/vendor-completions/", "644"],
    ["target/completions/git-cz.fish", "/usr/share/fish/completions/", "644"],
]

[patch.crates-io]
# console = { git = "https://github.com/ttys3/console.git", version = "0.15.0" }
# dialoguer = { git = "https://github.com/ttys3/dialoguer.git", version = "0.8.0" }
#dialoguer = { git = "https://github.com/ttys3/dialoguer.git", branch = "fuzzy" }

# local path for dev
# dialoguer = { path = "../lib/dialoguer" }
# console = { path = "../lib/console" }

